data/derived/fa15/progs/unify/prog0748.ml.out
Characters 93-99:
  |x -> (x,true) in func f,b);;
                    ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
